[tool.poetry]
name = "cryptopcash"
version = "1.1.1"
description = "A cryptocurrency portfolio in cli"
authors = ["Romain PESCHE <romain.pesche@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
urwid = "^2.0"
xdg = "^4.0"
requests = "^2.22"
Babel = "^2.7"
cryptocompy = "=0.1.1.dev1"

[tool.poetry.dev-dependencies]
pytest = "^5.1"
pytest-cov = "^2.7"
mock = "^3.0"
pycodestyle = "^2.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
