[metadata]
name = cryptopcash
summary = A cryptocurrency portfolio in cli
description = README.rst


[files]
packages = cryptopcash
data_files =
    etc/cryptopcash = resource/config.ini


[entry_points]
console_scripts =
    cryptopcash = cryptopcash.cryptopcash:main

[flake8]
max-line-length = 120

[pycodestyle]
max-line-length = 100
